--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -1,10 +1,36 @@
 <wm-page data-ng-controller="MainPageController" name="mainpage">
-  <wm-left-panel content="leftnav" columnwidth="2" name="left_panel1"></wm-left-panel>
-  <wm-mobile-navbar name="mobile_navbar1" title="Title" leftnavpaneliconclass="wi wi-menu" backbutton="false">
-    <wm-anchor caption="" name="AddLink" iconclass="wi wi-plus"></wm-anchor>
-  </wm-mobile-navbar>
-  <wm-content name="content1">
-    <wm-page-content columnwidth="12" name="page_content1"></wm-page-content>
-  </wm-content>
-  <wm-mobile-tabbar dataset="home,music,edit" name="mobile_tabbar1"></wm-mobile-tabbar>
+    <wm-left-panel content="leftnav" columnwidth="2" name="left_panel1"></wm-left-panel>
+    <wm-mobile-navbar name="mobile_navbar1" title="Title" leftnavpaneliconclass="wi wi-menu" backbutton="false">
+        <wm-anchor caption="" name="AddLink" iconclass="wi wi-plus"></wm-anchor>
+    </wm-mobile-navbar>
+    <wm-content name="content1">
+        <wm-page-content columnwidth="12" name="page_content1">
+            <wm-fileupload name="fileupload1" contenttype="image" service="FileService" operation="uploadFile"></wm-fileupload>
+            <wm-livelist listclass="list-group" itemsperrow="xs-1" template="true" dataset="bind:Variables.HrdbEmployeeData.dataSet" navigation="None" name="livelist1">
+                <wm-listtemplate layout="media" name="listtemplate1">
+                    <wm-card name="Contact Card">
+                        <wm-card-content horizontalalign="center" name="card_content1">
+                            <wm-layoutgrid name="layoutgrid1">
+                                <wm-gridrow name="gridrow1">
+                                    <wm-gridcolumn columnwidth="12" horizontalalign="center" name="gridcolumn1">
+                                        <wm-picture name="Picture" shape="circle" picturesource="bind:Variables.HrdbEmployeeData.dataSet.picurl" width="60%"></wm-picture>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                            <wm-label name="Employee name" class="h4" margin="unset unset 0em unset" color="#000" horizontalalign="center" caption="bind:Variables.HrdbEmployeeData.dataSet.firstname" whitespace="nowrap"></wm-label>
+                            <wm-label name="Designation" class="p  text-muted" horizontalalign="center" caption="bind:Variables.HrdbEmployeeData.dataSet.lastname" whitespace="nowrap"></wm-label>
+                        </wm-card-content>
+                        <wm-card-footer horizontalalign="center" name="card_footer1">
+                            <wm-buttongroup class="btn-group-justified" horizontalalign="center" name="buttongroup1">
+                                <wm-anchor class="btn btn-transparent" caption="" iconclass="wi wi-mail" fontsize="18" fontunit="pt" name="anchor2"></wm-anchor>
+                                <wm-anchor class="btn btn-transparent" caption="" iconclass="wi wi-call" fontsize="18" fontunit="pt" name="anchor3"></wm-anchor>
+                                <wm-anchor class="btn btn-transparent" caption="" iconclass="wi wi-location-on" fontsize="18" fontunit="pt" name="anchor4"></wm-anchor>
+                            </wm-buttongroup>
+                        </wm-card-footer>
+                    </wm-card>
+                </wm-listtemplate>
+            </wm-livelist>
+        </wm-page-content>
+    </wm-content>
+    <wm-mobile-tabbar dataset="home,music,edit" name="mobile_tabbar1"></wm-mobile-tabbar>
 </wm-page>
